--- a/templates/dev_add.html
+++ b/templates/dev_add.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
-{% block title %}添加设备{% endblock %}
+{% load static %}
+{% block title %}Add Devices{% endblock %}
 {% block custom_js %}
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 {% endblock %}
@@ -8,20 +8,20 @@
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="panel panel-info col-sm-4" style="margin-top: 80px; margin-bottom: 150px">
-            <div class="panel-heading"><h4 align="center">区域/设备添加管理</h4></div>
+            <div class="panel-heading"><h4 align="center">Area/Device Add Management</h4></div>
             <div class="panel-body">
                 <form class="form-horizontal" action="{% url 'dev_add' %}" method="post">
                 {% csrf_token %}
                     {% if pnum == '' %}
                         <div class="form-group">
-                            <label class="control-label col-sm-5">{{ num_h }}编号:</label>
+                            <label class="control-label col-sm-5">{{ num_h }}Number:</label>
                             <div class="col-sm-5">
                                 <input type="text" class="form-control" name="dev_num">
                             </div>
                         </div>
                         {% if area_a == '7' %}
                             <div class="form-group">
-                                <label class="control-label col-sm-5">控制区所属:</label>
+                                <label class="control-label col-sm-5">Ownership of control area:</label>
                                 <div class="col-sm-5">
                                     <select class="form-control" name="control_belong">
                                     {% for n in num %}
@@ -33,7 +33,7 @@
                         {% endif %}
                     {% else %}
                         <div class="form-group">
-                            <label class="control-label col-sm-5">{{ num_h }}编号:</label>
+                            <label class="control-label col-sm-5">{{ num_h }}Number:</label>
                             <div class="col-sm-5">
                                 <select class="form-control" name="dev_num">
                                     {% for n in num %}
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-5">设备上级:</label>
+                            <label class="control-label col-sm-5">Equipment supervisor:</label>
                             <div class="col-sm-5">
                                 <label class="control-label">{{ pnum }}</label>
                                 <input type="hidden" name="parent_area" value="{{ pnum }}">
@@ -51,13 +51,13 @@
                         </div>
                     {% endif %}
                     <div class="form-group">
-                        <label class="control-label col-sm-5">别名:</label>
+                        <label class="control-label col-sm-5">Alias:</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control" name="dev_name">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-5">备注:</label>
+                        <label class="control-label col-sm-5">Notes:</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control" name="remark">
                         </div>
@@ -67,8 +67,8 @@
                     <!--  设备属于级别(1,2,3) -->
                     <input type="hidden" name="type" value="{{ type }}">
                     <div class="pull-right clearfix">
-                        <button type="submit" class="btn btn-success">创建</button>
-                        <a href="{% url 'device' %}" class="btn bg-info" role="button">取消</a>
+                        <button type="submit" class="btn btn-success">Create</button>
+                        <a href="{% url 'device' %}" class="btn bg-info" role="button">Cancel</a>
                     </div>
                 </form>
             </div>
