--- a/templates/login.html
+++ b/templates/login.html
@@ -1,42 +1,109 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% block custom_css %}
 <style>
-.form{
+.form {
     padding: 20px;
     padding-top: 10px;
     padding-bottom: 30px;
     background-color: lavender;
     border-style: solid;
     border-width: thin;
+    border-radius: 10px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* 垂直居中 */
+}
+
+form {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    {#margin: auto;#}
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    {#margin-bottom: 100px;#}
+}
+
+h3 {
+    color: #4d4d4d;
+}
+
+.btn-success {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.btn-success:hover {
+    background-color: #4cae4c;
+    border-color: #398439;
+}
+
+.form-control {
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.has-error p {
+    color: red;
+}
+
+label {
+    font-weight: bold;
+}
+
+.text-center p {
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .form {
+        width: 90%;
+    }
 }
 </style>
 {% endblock %}
+
 {% block title %}
-    微电网登录界面
+    Microgrid Energy Management System Login
 {% endblock %}
+
 {% block nav2 %}{% endblock %}
+
 {% block content %}
-<div class="container" style="margin-top: 180px;">
-   <form class="col-sm-4 col-sm-offset-4 form form-horizontal " action="{% url 'login' %}" method="post" style="box-shadow: 0px 0px 10px grey;">
-       {% csrf_token %}
-       <h3 class="text-center">管理员登录</h3>
-       <div class="form-group {% if login_form.username.errors %}has-warning{% endif %}{% if msg %}has-error{% endif %}" >
-         <label for="username" class="col-sm-2 control-label">账&nbsp;号</label>
-         <div class="col-sm-9">
-             <input type="text" class="form-control " id="username" name="username">
-         </div>
-       </div>
-       <div class="form-group {% if login_form.username.errors %}has-warning{% endif %}{% if msg %}has-error{% endif %}">
-         <label for="password" class="col-sm-2 control-label">密&nbsp;码</label>
-         <div class="col-sm-9">
-             <input type="password" class="form-control" id="password" name="password">
-         </div>
-       </div>
-       <button type="submit" class="btn btn-success center-block">登录</button>
-       <div class="text-center">
-           <p style="color: red">{{ msg }}</p>
-       </div>
-     </form>
+<div class="container" style="margin-top: 50px;">
+    <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
+        <h3 class="text-center">Administrator Login</h3>
+
+        <!-- Username Field -->
+        <div class="form-group {% if login_form.username.errors %}has-error{% endif %}">
+            <label for="username" class="control-label">User name</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
+        </div>
+
+        <!-- Password Field -->
+        <div class="form-group {% if login_form.password.errors %}has-error{% endif %}">
+            <label for="password" class="control-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-success">Login</button>
+
+        <!-- Error Message -->
+        <div class="text-center">
+            <p>{{ msg }}</p>
+        </div>
+    </form>
 </div>
 {% endblock %}
