--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
-{% block title %}电站总览{% endblock %}
+{% load static %}
+{% block title %}Power Station Overview{% endblock %}
 {% block custom_css %}
 <link href="{% static 'css/mic.css' %}" rel="stylesheet">
 {% endblock %}
@@ -9,46 +9,65 @@
 {% block content %}
     <div class="container">
         <div class="over-left">
-            <div class="over-box1">
+            <div class="over-box1" style="max-width: 100%; overflow: hidden;">
                 <div style="text-align: center;background-color: lawngreen;color: whitesmoke;padding-bottom: 5px">
-                    <span style="font-size: 20px;">电站天气概览</span>
+                    <span style="font-size: 20px;">Weather Overview</span>
                 </div>
                 <!-- 天气js插件https://www.seniverse.com/widget/more -->
-                <div style="text-align: center;background-color: lightskyblue;">
-                    <iframe src="//www.seniverse.com/weather/weather.aspx?uid=U588980A9D&cid=CHSN000000&l=zh-CHS&p=SMART&a=0&u=C&s=1&m=0&x=1&d=3&fc=FFFFFF&bgc=&bc=&ti=0&in=0&li=" frameborder="0" scrolling="no" width="100%" height="180" allowTransparency="true"></iframe>
+{#                <div style="text-align: center;background-color: lightskyblue;">#}
+{#                    <iframe src="//api.seniverse.com/v3/weather/now.json?key=SzWSO2GeHuRFNXk8e&location=beijing&language=en&unit=c" width="100%" height="100%" allowTransparency="true"></iframe>#}
+{#                </div>#}
+                <div id="tp-weather-widget"></div>
+                <script>
+                    (function(a,h,g,f,e,d,c,b){b=function(){d=h.createElement(g);c=h.getElementsByTagName(g)[0];d.src=e;d.charset="utf-8";d.async=1;c.parentNode.insertBefore(d,c)};a["SeniverseWeatherWidgetObject"]=f;a[f]||(a[f]=function(){(a[f].q=a[f].q||[]).push(arguments)});a[f].l=+new Date();if(a.attachEvent){a.attachEvent("onload",b)}else{a.addEventListener("load",b,false)}}(window,document,"script","SeniverseWeatherWidget","//cdn.sencdn.com/widget2/static/js/bundle.js?t="+parseInt((new Date().getTime() / 100000000).toString(),10)));
+                    window.SeniverseWeatherWidget('show', {
+                        flavor: "slim",
+                        location: "WX4FBXXFKE4F",
+                        geolocation: true,
+                        language: "en",
+                        unit: "c",
+                        theme: "light",
+                        token: "5a93c6cb-9883-4647-8ba1-113d2caf037b",
+                        hover: "always",
+                        container: "tp-weather-widget"
+                    });
+                </script>
                 </div>
             </div>
-        </div>
         <div class="over-middle">
             <div class="over-box2">
                 <div class="one">
-                    <span style="font-size: 20px;">能源产出总览</span>
+                    <span style="font-size: 20px;">Energy Output Overview</span>
                 </div>
                 <div>
-                    <div class="two"><img class="picture" src="{% static 'img/output.jpg' %}">&nbsp;<span style="font-size: 18px">能源总产出</span></div>
-                    <div class="two"><img class="picture" src="{% static 'img/money.png' %}">&nbsp;<span  style="font-size: 18px">能源总收益</span></div>
+                    <div class="two"><img class="picture" src="{% static 'img/output.jpg' %}">&nbsp;<span style="font-size: 18px">Total Energy Output</span></div>
+                    <div class="two"><img class="picture" src="{% static 'img/money.png' %}">&nbsp;<span  style="font-size: 18px">Total Energy Income</span></div>
                 </div>
                 <div>
                     <div class="three" style="border-right: 1px lawngreen solid;">
-                        <span>今日</span>
+                        <span>Today</span>
                         <div>111kwh</div>
                     </div>
                     <div class="three" style="border-right: 1px lawngreen solid;">
-                        <span>累积</span>
-                        <div>111kwh</div>
+                        <span>Accumulation</span>
+                        <div>23000kwh</div>
                     </div>
                     <div class="three" style="border-right: 1px lawngreen solid;">
-                        <span>今日</span>
-                        <div>111元</div>
+                        <span>Today</span>
+                        <div>252元</div>
                     </div>
                     <div class="three">
-                        <span>累积</span>
-                        <div>111元</div>
+                        <span>Accumulation</span>
+                        <div>145840元</div>
                     </div>
                 </div>
             </div>
             <div class="over-box3">
-
+{#            <div style="text-align: center;color: white;background-color: lightskyblue;height: 40px;margin-bottom: 10px;">#}
+{#                <h4 style="line-height: 40px;margin-top: 0" >PSO Optimization Display</h4>#}
+{#                <div id="pso" style="width: auto; height: 300px;border: grey 1px solid"></div>#}
+                <img src="/media/img/display.png" style="max-width: 100%; height: auto;">
+{#            </div>#}
             </div>
         </div>
     </div>
