--- a/templates/pso.html
+++ b/templates/pso.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
-{% block title %}优化管理{% endblock %}
+{% load static %}
+{% block title %}Optimize Management{% endblock %}
 {% block custom_css %}
     <link href="{% static 'css/mic.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
@@ -11,43 +11,43 @@
     <div class="container">
         <div class="pso-box1">
             <div style="text-align: center;color: white;background-color: lightskyblue;height: 40px;margin-bottom: 10px;">
-                <h4 style="line-height: 40px;margin-top: 0px">PSO优化相关参数设置</h4>
+                <h4 style="line-height: 40px;margin-top: 0px">PSO Optimization Parameter Settings</h4>
             </div>
-            <form class="form-horizontal col-sm-12" action="{% url 'login' %}" method="get">
+            <form class="form-horizontal col-sm-12" action="{% url 'pso' %}" method="get">
             {% csrf_token %}
                 <div class="form-group" >
-                    <label class="col-sm-6 control-label">电网输入微网最大功率:</label>
+                    <label class="col-sm-6 control-label">Max power input to the microgrid:</label>
                     <div class="col-sm-3">
                         <input type="text" class="form-control" id="username" name="microgrid_max" value="{{ microgrid_max }}">
                     </div>
                 </div>
                 <div class="form-group" >
-                    <label class="col-sm-6 control-label">电网输入微网最小功率:</label>
+                    <label class="col-sm-6 control-label">Min power input to the microgrid:</label>
                     <div class="col-sm-3">
                         <input type="text" class="form-control" id="username" name="microgrid_min" value="{{ microgrid_min }}">
                     </div>
                 </div>
                 <div class="form-group" >
-                    <label class="col-sm-6 control-label">储能最大放电功率:</label>
+                    <label class="col-sm-6 control-label">Max discharge power of energy storage:</label>
                     <div class="col-sm-3">
                         <input type="text" class="form-control" id="username" name="battary_output" value="{{ battary_output }}">
                     </div>
                 </div>
                 <div class="form-group" >
-                    <label class="col-sm-6 control-label">储能最大充电功率:</label>
+                    <label class="col-sm-6 control-label">Max charge power of energy storage:</label>
                     <div class="col-sm-3">
                         <input type="text" class="form-control" id="username" name="battary_input" value="{{ battary_input }}">
                     </div>
                 </div>
                 <div>
                     <div class="col-sm-7"></div>
-                    <button type="submit" class="btn btn-success" onclick="return confirm('确认设置?')">设置</button>
+                    <button type="submit" class="btn btn-success" onclick="return confirm('Confirm Setting?')">Confirm</button>
                 </div>
             </form>
         </div>
         <div class="pso-box2">
             <div style="text-align: center;color: white;background-color: lightskyblue;height: 40px;margin-bottom: 10px;">
-                <h4 style="line-height: 40px;margin-top: 0" >PSO优化结果输出</h4>
+                <h4 style="line-height: 40px;margin-top: 0" >PSO Optimization Results</h4>
                 <div id="pso" style="width: auto; height: 300px;border: grey 1px solid"></div>
                 <script>
                     var times = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23];
@@ -57,7 +57,7 @@
                     var option = {
                             //标题
                             title:{
-                                text: '功率',
+                                text: 'Power',
                                 x: 'center'
                             },
                             // 提示框组件
@@ -67,25 +67,26 @@
                             // 图类组件
                             legend:{
                                 bottom:'left',
+                                itemGap: 30,
                                 data:[{
-                                    name: '电网向微电网输入输出功率',
+                                    name: 'Microgrid input & output power',
                                     icon: 'circle'
                                     },{
-                                    name: '电池输入输出功率',
+                                    name: 'Battery input & output power',
                                     icon: 'circle'
                                     }]
                             },
                             xAxis: {
-                                name: '时间',
+                                name: 'Time/hour',
                                 type: 'category',
                                 data: times
                             },
                             yAxis: {
-                                name: '功率/kw',
+                                name: 'Power/kw',
                                 type: 'value'
                             },
                             series: [{
-                                    name: '电网向微电网输入输出功率',
+                                    name: 'Microgrid input & output power',
                                     type: 'line',
                                     itemStyle: {
                                         normal: {
@@ -94,7 +95,7 @@
                                     },
                                     data: microgrid
                                 },{
-                                    name: '电池输入输出功率',
+                                    name: 'Battery input & output power',
                                     type: 'line',
                                     itemStyle: {
                                         normal: {
@@ -104,7 +105,8 @@
                                     data: battary
                                 }]
                         };
-                        psochart.setOption(option)
+                        psochart.clear()  // 清除旧的图表状态
+                        psochart.setOption(option)  // 重新渲染图表
                 </script>
             </div>
         </div>
