--- a/templates/dev_info_battary.html
+++ b/templates/dev_info_battary.html
@@ -15,13 +15,13 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label class="control-label col-sm-6">Number:</label>
-                    <label class="control-label col-sm-2">{{ battaryproperty.battary_num }}</label>
-                    <input type="hidden" value="{{ battaryproperty.battary_num }}" name="num">
+                    <label class="control-label col-sm-2">{{ batteryproperty.battery_num }}</label>
+                    <input type="hidden" value="{{ batteryproperty.battery_num }}" name="num">
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-6">Rated Capacity:</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control" value="{{ battaryproperty.rated_capacity }}" name="rated_capacity">
+                        <input type="text" class="form-control" value="{{ batteryproperty.rated_capacity }}" name="rated_capacity">
                     </div>
                 </div>
                 <div>
