--- a/templates/overview.html
+++ b/templates/overview.html
@@ -15,7 +15,7 @@
                 </div>
                 <!-- 天气js插件https://www.seniverse.com/widget/more -->
 {#                <div style="text-align: center;background-color: lightskyblue;">#}
-{#                    <iframe src="//api.seniverse.com/v3/weather/now.json?key=SzWSO2GeHuRFNXk8e&location=beijing&language=en&unit=c" width="100%" height="100%" allowTransparency="true"></iframe>#}
+{#                    <iframe src="https://api.seniverse.com/v3/weather/now.json?key=S6ifOiz-euTR4V6qt&location=Singapore&language=en&unit=c" width="100%" height="100%" allowTransparency="true"></iframe>#}
 {#                </div>#}
                 <div id="tp-weather-widget"></div>
                 <script>
@@ -54,20 +54,20 @@
                     </div>
                     <div class="three" style="border-right: 1px lawngreen solid;">
                         <span>Today</span>
-                        <div>252元</div>
+                        <div>$252</div>
                     </div>
                     <div class="three">
                         <span>Accumulation</span>
-                        <div>145840元</div>
+                        <div>$145840</div>
                     </div>
                 </div>
             </div>
             <div class="over-box3">
-{#            <div style="text-align: center;color: white;background-color: lightskyblue;height: 40px;margin-bottom: 10px;">#}
-{#                <h4 style="line-height: 40px;margin-top: 0" >PSO Optimization Display</h4>#}
+            <div style="text-align: center;color: white;background-color: lightskyblue;height: 40px;margin-bottom: 10px;">
+                <h4 style="line-height: 40px;margin-top: 0" >PSO Optimization Display</h4>
 {#                <div id="pso" style="width: auto; height: 300px;border: grey 1px solid"></div>#}
-                <img src="/media/img/display.png" style="max-width: 100%; height: auto;">
-{#            </div>#}
+                <img src="/media/img/display.png" style="width: auto; height: 350px;">
+            </div>
             </div>
         </div>
     </div>
