--- a/templates/pso.html
+++ b/templates/pso.html
@@ -5,7 +5,8 @@
     <link href="{% static 'css/mic.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block custom_js %}
-    <script src="https://cdn.bootcss.com/echarts/3.8.5/echarts.js"></script>
+{#    <script src="https://cdn.bootcss.com/echarts/3.8.5/echarts.js"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.0/echarts.min.js"></script>
 {% endblock %}
 {% block content %}
     <div class="container">
@@ -30,13 +31,13 @@
                 <div class="form-group" >
                     <label class="col-sm-6 control-label">Max discharge power of energy storage:</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" id="username" name="battary_output" value="{{ battary_output }}">
+                        <input type="text" class="form-control" id="username" name="battery_output" value="{{ battery_output }}">
                     </div>
                 </div>
                 <div class="form-group" >
                     <label class="col-sm-6 control-label">Max charge power of energy storage:</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" id="username" name="battary_input" value="{{ battary_input }}">
+                        <input type="text" class="form-control" id="username" name="battery_input" value="{{ battery_input }}">
                     </div>
                 </div>
                 <div>
@@ -52,7 +53,7 @@
                 <script>
                     var times = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23];
                     var microgrid = {{ microgrid|safe }};
-                    var battary = {{ battray|safe }};
+                    var battery = {{ battery|safe }};
                     var psochart = echarts.init(document.getElementById('pso'));
                     var option = {
                             //标题
@@ -102,7 +103,7 @@
                                             color: '#2dd4d2'
                                         },
                                     },
-                                    data: battary
+                                    data: battery
                                 }]
                         };
                         psochart.clear()  // 清除旧的图表状态
